--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,39 @@
-# Webex Contact Center BYOVA Gateway Python Dependencies
-
-# Core dependencies
-grpcio>=1.54.0
-grpcio-tools>=1.54.0
-protobuf>=4.23.0
+# Core gRPC dependencies
+grpcio>=1.50.0
+grpcio-tools>=1.50.0
 
 # Web framework for monitoring interface
-flask>=2.3.0
-flask-cors>=4.0.0
+Flask>=2.3.0
 
 # Audio processing
 pydub>=0.25.1
-soundfile>=0.12.1
+wave>=0.0.2
 
-# Logging and monitoring
-structlog>=23.1.0
+# Logging and configuration
+PyYAML>=6.0.0
+python-dotenv>=1.0.0
+
+# Async support
+asyncio>=3.4.3
+
+# Development and testing tools
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+ruff>=0.1.0
+mypy>=1.0.0
+
+# Type checking
+types-PyYAML>=6.0.0
+types-requests>=2.28.0
+
+# Documentation
+sphinx>=6.0.0
+sphinx-rtd-theme>=1.2.0
+
+# Monitoring and metrics
 prometheus-client>=0.17.0
 
 # Configuration management
 pydantic>=2.0.0
 python-dotenv>=1.0.0
-PyYAML>=6.0.0
-
-# Async support
-asyncio-mqtt>=0.13.0
-aiohttp>=3.8.0
-
-# Development dependencies
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-flake8>=6.0.0
-mypy>=1.5.0
