--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ prometheus-client>=0.17.0
 # Configuration management
 pydantic>=2.0.0
 python-dotenv>=1.0.0
+
+# AWS SDK v2 for Lex
+boto3>=1.34.0
+botocore>=1.34.0
