refactor: improve AWS Lex connector and configuration handling
- Updated AWSLexConnector to enhance conversation management and error handling for audio and text inputs.
- Refined configuration structure in config.yaml for connectors, transitioning from list to dictionary format for better clarity.
- Improved logging throughout the AWSLexConnector for better debugging and monitoring of interactions.
- Adjusted WxCCGatewayServer to utilize full agent IDs for routing while maintaining display names for user interaction.
- Enhanced error handling and validation for connector configurations to ensure required fields are present.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,7 +11,7 @@ gateway:
 
 # Connector configurations
 connectors:
-  - name: "my_local_test_agent"
+  my_local_test_agent:
     type: "local_audio_connector"
     class: "LocalAudioConnector"
     module: "connectors.local_audio_connector"
@@ -28,8 +28,18 @@ connectors:
     agents:
       - "Local Playback"
 
-# Example configuration for future vendor connectors
-# Uncomment and modify as needed when adding new connectors
+  aws_lex_connector:
+    type: "aws_lex_connector"
+    class: "AWSLexConnector"
+    module: "connectors.aws_lex_connector"
+    config:
+      region_name: "us-east-1"  # AWS region where your Lex bots are located
+      # Optional: Explicit AWS credentials (will use default credentials if not provided)
+      # aws_access_key_id: "${AWS_ACCESS_KEY_ID}"
+      # aws_secret_access_key: "${AWS_SECRET_ACCESS_KEY}"
+      # aws_session_token: "${AWS_SESSION_TOKEN}"  # For temporary credentials
+    agents: []  # Will be populated automatically from Lex bots in the region
+
 #  - name: "vendor_x_connector"
 #    type: "vendor_x_connector"
 #    class: "VendorXConnector"
