refactor: update AWS Lex connector for improved audio handling and logging
- Changed logging level in config.yaml from DEBUG to INFO for better performance.
- Enhanced AWSLexConnector to include detailed audio format conversion methods, ensuring compatibility with WxCC requirements.
- Improved error handling and logging throughout the AWSLexConnector for better debugging and monitoring of audio processing.
- Updated conversation handling to provide clearer responses and logging for audio content.
- Refined gRPC response handling in ConversationProcessor to ensure accurate audio content delivery.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -76,7 +76,7 @@ monitoring:
 logging:
   # Gateway logging (gRPC server, connectors, etc.)
   gateway:
-    level: "DEBUG"
+    level: "INFO"
     format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
     file: "logs/gateway.log"
     max_size: "10MB"
