--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,6 +33,8 @@ connectors:
     module: "connectors.aws_lex_connector"
     config:
       region_name: "us-east-1"  # AWS region where your Lex bots are located
+      # Optional: Bot alias ID to use for conversations (default: TSTALIASID)
+      bot_alias_id: "TSTALIASID"
       # Optional: Explicit AWS credentials (will use default credentials if not provided)
       # aws_access_key_id: "${AWS_ACCESS_KEY_ID}"
       # aws_secret_access_key: "${AWS_SECRET_ACCESS_KEY}"
