feat: enhance audio recording with silence timeout and quiet threshold
- Added a new quiet_threshold parameter in config.yaml to define the sensitivity for silence detection.
- Implemented silence timeout checks in LocalAudioConnector to finalize recordings based on silence duration during DTMF inputs and events.
- Enhanced AudioRecorder to track silence and speech detection, improving the accuracy of audio recording initiation and finalization.
- Updated logging to provide clearer insights into recording status and silence detection events.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -23,6 +23,7 @@ connectors:
         output_dir: "logs/audio_recordings"  # Directory to save audio recordings
         silence_threshold: 3000  # Amplitude threshold for silence detection
         silence_duration: 1.0  # Amount of silence in seconds before stopping recording
+        quiet_threshold: 20  # How far from 127 (quiet background) to consider "silence"
       # Audio file mappings (matching your actual files)
       audio_files:
         welcome: "welcome.wav"
