feat: add barge-in configuration for AWS Lex connector
- Introduced barge-in configuration options in `aws_lex_example.yaml` and `config.yaml` to allow users to interrupt the bot's response.
- Updated `AWSLexConfig` to handle barge-in settings, with default values for different environments.
- Enhanced `AWSLexConnector` to utilize the barge-in configuration during conversation handling, improving user interaction flexibility.
- Added unit tests to validate the barge-in functionality, ensuring correct behavior when enabled or disabled.
- Improved overall architecture by integrating barge-in settings into the existing configuration management system.

--- a/config/aws_lex_example.yaml
+++ b/config/aws_lex_example.yaml
@@ -14,6 +14,11 @@ aws_lex_connector:
   # Change this if your bot uses a different alias
   bot_alias_id: "TSTALIASID"
   
+  # Optional: Barge-in configuration
+  # When enabled, users can interrupt the bot's response
+  # Default: false (disabled)
+  barge_in_enabled: false
+  
   # Note: Audio conversion to WAV format is always enabled (WxCC requirement)
 
 # Example configurations for different environments:
@@ -22,13 +27,16 @@ aws_lex_connector:
 aws_lex_connector_dev:
   region_name: "us-east-1"
   bot_alias_id: "TSTALIASID"
+  barge_in_enabled: true  # Enable barge-in for development
 
 # Production
 aws_lex_connector_prod:
   region_name: "us-east-1"
   bot_alias_id: "PRODALIASID"  # Your production bot alias
+  barge_in_enabled: false  # Disable barge-in for production (default)
 
 # Custom bot with specific alias
 aws_lex_connector_custom:
   region_name: "us-west-2"
   bot_alias_id: "CUSTOMALIAS"  # Your custom bot alias
+  barge_in_enabled: true  # Enable barge-in for custom bot
