--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,83 @@
 # Core gRPC dependencies
-grpcio>=1.50.0
-grpcio-tools>=1.50.0
+grpcio>=1.74.0
+grpcio-tools>=1.74.0
+protobuf>=6.31.1
 
 # Web framework for monitoring interface
-Flask>=2.3.0
+Flask>=3.1.1
+Werkzeug>=3.1.3
+Jinja2>=3.1.6
+MarkupSafe>=3.0.2
+itsdangerous>=2.2.0
+click>=8.2.1
+blinker>=1.9.0
 
 # Audio processing
 pydub>=0.25.1
-wave>=0.0.2
+soundfile>=0.13.1
 
 # Logging and configuration
-PyYAML>=6.0.0
-python-dotenv>=1.0.0
+PyYAML>=6.0.2
+python-dotenv>=1.1.1
+structlog>=25.4.0
 
-# Async support
-asyncio>=3.4.3
+# AWS SDK for Lex
+boto3>=1.40.6
+botocore>=1.40.6
+s3transfer>=0.13.1
+jmespath>=1.0.1
+python-dateutil>=2.9.0.post0
+urllib3>=2.5.0
+six>=1.17.0
 
 # Development and testing tools
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-ruff>=0.1.0
-mypy>=1.0.0
+pytest>=8.4.1
+pytest-asyncio>=1.1.0
+black>=25.1.0
+ruff>=0.12.7
+mypy>=1.17.1
+mypy_extensions>=1.1.0
+flake8>=7.3.0
+pycodestyle>=2.14.0
+pyflakes>=3.4.0
+mccabe>=0.7.0
+pathspec>=0.12.1
+packaging>=25.0
+platformdirs>=4.3.8
+pluggy>=1.6.0
+iniconfig>=2.1.0
+attrs>=25.3.0
+Pygments>=2.19.2
 
 # Type checking
-types-PyYAML>=6.0.0
-types-requests>=2.28.0
-
-# Documentation
-sphinx>=6.0.0
-sphinx-rtd-theme>=1.2.0
-
-# Monitoring and metrics
-prometheus-client>=0.17.0
+typing_extensions>=4.14.1
+typing-inspection>=0.4.1
 
 # Configuration management
-pydantic>=2.0.0
-python-dotenv>=1.0.0
+pydantic>=2.11.7
+pydantic_core>=2.33.2
+annotated-types>=0.7.0
 
-# AWS SDK v2 for Lex
-boto3>=1.34.0
-botocore>=1.34.0
+# Monitoring and metrics
+prometheus_client>=0.22.1
+
+# Async support (built-in modules, but listing dependencies)
+aiohttp>=3.12.15
+aiohappyeyeballs>=2.6.1
+aiosignal>=1.4.0
+frozenlist>=1.7.0
+multidict>=6.6.3
+yarl>=1.20.1
+idna>=3.10
+
+# MQTT support (if needed)
+asyncio-mqtt>=0.16.2
+paho-mqtt>=2.1.0
+
+# C extensions
+cffi>=1.17.1
+pycparser>=2.22
+propcache>=0.3.2
+
+# Scientific computing (if needed)
+numpy>=2.3.2
