chore: update .gitignore and README for generated files and virtual environment instructions
- Added entries to .gitignore to exclude generated protobuf files from commits, ensuring that only necessary files are tracked.
- Updated README to clarify the steps for creating and activating the virtual environment, including verification of activation.
- Enhanced the documentation regarding the generation of gRPC stubs, emphasizing that generated files should not be committed to the repository.
- Included a quick start section in the README for easier onboarding and testing of the gateway functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -247,4 +247,8 @@ temp/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# Generated protobuf files (DO NOT COMMIT)
+src/generated/*_pb2.py
+src/generated/*_pb2_grpc.py 
