chore: update .gitignore and __init__.py for generated protobuf files
- Added entries to .gitignore to exclude generated protobuf files from commits, ensuring that only necessary files are tracked.
- Updated __init__.py to dynamically add the current directory to the Python path, allowing generated files to find each other, enhancing module accessibility.
- This change aims to improve project organization and maintainability by preventing unnecessary file tracking and ensuring proper module imports.

--- a/.gitignore
+++ b/.gitignore
@@ -235,6 +235,10 @@ temp/
 *.backup
 *.old
 
+# Generated protobuf files (generated in src/generated/ directory)
+src/generated/*_pb2.py
+src/generated/*_pb2_grpc.py
+
 # IDE specific
 *.swp
 *.swo
@@ -247,8 +251,4 @@ temp/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db
-
-# Generated protobuf files (DO NOT COMMIT)
-src/generated/*_pb2.py
-src/generated/*_pb2_grpc.py 
+Thumbs.db 
