chore: update documentation and configuration for Jekyll integration
- Added Jekyll-related entries to .gitignore to exclude generated files from version control, ensuring a cleaner repository.
- Updated author and email information in the Jekyll configuration file to reflect the Webex Developer Relations Team.
- Introduced a new Gemfile and Gemfile.lock for managing Jekyll dependencies, enhancing the documentation build process.
- This update aims to improve the documentation structure and maintainability for the Webex Contact Center BYOVA Gateway project.

--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,12 @@ temp/
 src/generated/*_pb2.py
 src/generated/*_pb2_grpc.py
 
+# Jekyll generated files
+docs/_site/
+docs/.sass-cache/
+docs/.jekyll-cache/
+docs/.jekyll-metadata
+
 # IDE specific
 *.swp
 *.swo
