--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+# Note: This project does not use .env files, but keeping standard Python .gitignore entries
 .env
 .venv
 env/
@@ -209,6 +210,7 @@ $RECYCLE.BIN/
 # Configuration files with sensitive data
 config/local.yaml
 config/production.yaml
+# Note: This project does not use .env files, but keeping this here for safety
 *.env
 
 # Log files
@@ -218,6 +220,9 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Development and implementation notes
+AUTHENTICATION_IMPLEMENTATION_SUMMARY.md
 
 # Database files
 *.db
@@ -257,4 +262,4 @@ docs/.jekyll-metadata
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
