docs: Update setup guide links to point to the new documentation URL
- Replaced local setup guide links with the new URL for the BYOVA with AWS Lex Setup Guide across README and documentation files.
- Removed the outdated setup guide file as it is no longer needed.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@ navigation:
   - title: Home
     url: /
   - title: Setup Guide
-    url: /guides/byova-aws-lex-setup.html
+    url: https://developer.webex.com/webex-contact-center/docs/byova-and-aws-lex
   - title: API Reference
     url: /api/
   - title: GitHub Repository
