feat: implement gRPC health check v1 with monitoring integration
- Add HealthCheckService implementing gRPC health check v1 protocol
- Integrate health service with WxCCGatewayServer for service monitoring
- Update monitoring API to expose gRPC health status and service details
- Enhance top-right status indicator to show gRPC health (SERVING/NOT_SERVING)
- Add grpcio-health-checking dependency for health check support

The health check service monitors gateway and overall system health,
providing standard gRPC health endpoints for external monitoring tools.
The dashboard's top-right indicator now reflects actual gRPC service health
while maintaining the original dashboard layout and Uptime display.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core gRPC dependencies
 grpcio>=1.74.0
 grpcio-tools>=1.74.0
+grpcio-health-checking>=1.74.0
 protobuf>=6.31.1
 
 # Web framework for monitoring interface
