feat: add JWT authentication for gRPC requests
- Implement JWT validation for securing gRPC communication with Webex Contact Center.
- Introduce JWTAuthInterceptor for token validation in gRPC requests.
- Update configuration to include JWT settings in config.yaml.
- Enhance README with detailed JWT authentication instructions and deployment recommendations.
- Add unit tests for JWT validation and interceptor functionality.
- Update requirements.txt to include cryptography support for JWT signature verification.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ click>=8.2.1
 blinker>=1.9.0
 
 # Authentication and HTTP
-PyJWT>=2.8.0
+PyJWT[crypto]>=2.8.0  # JWT with cryptography support for RSA signature verification
+cryptography>=43.0.0  # Cryptographic operations for JWT validation
 requests>=2.31.0
 
 # Audio processing
